	Seems some apps look for it in one and others in the other directory :/
	* Fixed bug in merging Xcookie - order of arguments was reversed, so cookie
	was in fact merged in user, not /root directory.
	* Added UCK as preparer in ISO image :)
	* Fixed bug in dialog_menu in gui.sh library - it did not handle choices with spaces.
	* Moved unmounting before removing remastering directories.

Package:
	* customize-cd-gui was renamed to uck-gui

Examples:
	* Applied fix for bootchart not installed on local machine (by Jyrki
	Muukkonen), see bug 72842.

---------
-- 1.3 --
---------

* GUI:
	* Fixed bug 60130 (Cannot create /home directory, file exists) by
	passing name of user in some other variable.
* Backend:
	* Fix for bug 61600 (Checksum errors for generated ISO image)
	(Krzysztof Lichota).
	* Fixed bug 55981 - partially matching language names have been
	added to boot languages (Krzysztof Lichota).
	* Fixed bug 55693- Edgy languages list file position is now
	correctly detected (Fabrizio Balliano)

---------
-- 1.2 --
---------

* GUI:
	* Added ability to use package manager inside CD image to customize packages installed (Krzysztof Lichota).
	* Support for gtk has been added (using zenity). (Fabrizio Balliano)
	* Some info messages were updated. (Fabrizio Balliano)
	* now we ask user if he wants to keep remaster directories to evetually do some manual customization in a second time. (Fabrizio Balliano)
* Backend:
	* a bug with initrd customization was fixed, now temporary initrd.gz is removed after use. (Fabrizio Balliano)
	* a bug with initrd script calling was fixed, now all variables are available in the script too. (Fabrizio Balliano)
	* if a previous remastering directories are found the system continues a previous session. (Fabrizio Balliano)
	* libraries splitting and file reorganization. (Fabrizio Balliano)
	* successful building message was added with the path to the ISO. (Fabrizio Balliano)